2002-05-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Bugfix: complain if program not found.

	* scripts/update-lily.py (next_version, prev_version, diff_name):
	New function.  Patches now named name-prev-latest.diff.gz.
	Bugfix: import shutil.

2002-05-19  Han-Wen  <hanwen@cs.uu.nl>

	* input/tutorial/sammartini.ly: fix and document autochange
	weirdness.

	* scm/pdftex.scm: resurrect PDFTeX output. Still doesn't work, but
	does produce .pdftex files.

	* lily/note-collision.cc (check_meshing_chords): move file from
	collision.cc, implement merged note heads (there you go, Drarn :-)

	* input/regression/collision-heads.ly: new file

2002-05-18  Juergen Reuter  <reuter@ipd.uka.de>

	* mf/parmesan-heads.mf, scm/grob-description.scm,
	scm/grob-property-description.scm, scm/interface-description,
	lily/include/my-lily-parser.hh, lily/include/ligature-head.hh,
	lily/include/mensural-ligature.hh, lily/include/lily-proto.hh,
	lily/include/ligature-engraver.hh,
	lily/include/ligature-bracket.hh, lily/parser.yy,
	lily/ligature-bracket-engraver.cc, lily/mensural-ligature.cc,
	lily/mensural-ligature-engraver.cc, lily/note-heads-engraver.cc,
	lily/ligature-head.cc, lily/ligature-engraver.cc,
	lily/ligature-bracket.cc, input/test/mensural-ligatures.ly:
	implemented white mensural ligatures (still with a big list of
	TODOs)


2002-05-19  Han-Wen  <hanwen@cs.uu.nl>

	* lily/*.cc: use LY_DEFINE everywhere. Move doc strings from
	Documentation/user/internals.itely.

	* lily/function-documentation.cc: new file. Infrastructure for
	self documenting Scheme functions.

2002-05-18  Han-Wen  <hanwen@cs.uu.nl>

	* lily/stem.cc (calc_stem_info): bugfix for less ugly knees.

2002-05-17  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py (re_dict): fix regexps; don't combine ?
	and * (as in "([^>]*)?")

2002-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi: Update GCC, Flex and GUILE info.