@@ -426,6 +426,6 @@ ADD_INTERFACE (Note_collision_interface, "note-collision-interface",
   "An object that handles collisions between notes with different stem
 directions and horizontal shifts. Most of the interesting properties
 are to be set in @ref{note-column-interface}: these are
-@code{force-hshift} and @{horizontal-shift}.
+@code{force-hshift} and @code{horizontal-shift}.
 ",
   "merge-differently-dotted merge-differently-headed collision-done");
